2002-07-15  Kevin Buettner  <kevinb@redhat.com>

	* aix-thread.c (gdbcmd.h): Include.
	(DEBUG, DBG, DBG2, dbg): Eliminate.
	(debug_aix_thread): New static global.
	(ptrace_check, pdc_symbol_addrs, pdc_read_regs, pdc_write_regs)
	(pdc_read_data, pdc_write_data, pdc_alloc, pdc_realloc, pdc_dealloc)
	(fetch_regs_lib, store_regs_lib, store_regs_kern): Rewrite
	invocations to DBG and DBG2 macros to test against
	``debug_aix_thread'' and call fprintf_unfiltered().
	(_initialize_aix_thread): Add new command "set debug aix-thread".

2002-07-15  Andrew Cagney  <ac131313@redhat.com>

	From Gerhard Tonn <TON@de.ibm.com>:
	* s390-nat.c (fill_fpregset, fill_gregset): Use regcache_collect
	instead of supply_register.

2002-07-15  Andrew Cagney  <ac131313@redhat.com>

	* dwarf2cfi.c: Include "gdb_assert.h".
	(frame_state_for): Use gdb_assert to check that fde->cie_ptr is
	non-NULL.
	(update_context): Do not use __func__.  Add missing ``break''.
	(update_context): Do not use __func__.

2002-07-15  Elena Zannoni  <ezannoni@redhat.com>

        * rs6000-tdep.c (rs6000_gdbarch_init): Remove variable print_insn
        and its setting.  Set gdbarch instruction printing functions
        directly.  For non-rs6000 case use new function
        gdb_print_insn_powerpc.
        (gdb_print_insn_powerpc): New function.

2002-07-13  Andrew Cagney  <ac131313@redhat.com>

	* NEWS: Mention that the d30v has been marked obsolete.
	* MAINTAINERS: Note that d30v / d30v-elf has been made obsolete.
	* configure.tgt: Mark d30v-*-* as obsolete.
	* d30v-tdep.c: Mark file as obsolete.
	* config/d30v/d30v.mt: Ditto.
	* config/d30v/tm-d30v.h: Ditto.

2002-07-13  Aidan Skinner <aidan@velvet.net>

	* ada-tasks.c (add_task_entry): replace calls to
	malloc() with xmalloc
	* ada-tasks.c (init_task_list): replace calls to free with xfree()
	
	* ada-lang.c (replace_operator_with_call, fill_in_ada_prototype,
	ada_finish_decode_line_1, all_sals_for_line
	ada_breakpoint_rewrite): replace calls to free() with xfree()